test/files/neg/saferJavaConversions.check
saferJavaConversions.scala:13: error: type mismatch;
 found   : String("a")
 required: Foo
    val v = map.get("a")  // now this is a type error
                    ^
one error found
